mobile screen responsiveness issues fixed. button animation fixed. image alignment issues fixed

--- a/resources/style.css
+++ b/resources/style.css
@@ -10,34 +10,33 @@
 }
 
 section 
-{
-    display: flex;
+{ 
     position: relative;
     height: 100vh;
     width: 100%;
     justify-content: center;
 }
 
-.logo
-{
-    display: flex;
-    margin: 0 auto;
-    position: relative;
-    z-index: 1000;
-    display: flex;
-    top: 1rem;
-    left: 9rem;
+section .logo
+{ 
+    margin: 2% 8.5%;
+    position: absolute;
+    z-index: 1000; 
     height: 6rem;
-    background: rgba(0,0,0,0);
-    width: 0px
+    background: rgba(0,0,0,0); 
 }
 
-.logo img 
+section .logo img 
 {
     padding: 2rem;
 }
 
-.textBox
+section .content
+{
+    display: flex;
+}
+
+section .content .textBox
 {
     background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
     background-size: cover;
@@ -47,9 +46,10 @@ section
     position: relative;
     justify-content: center;
     margin: 0 auto;
+    padding: 6rem 0;
 }
 
-.textBox::after 
+section .content .textBox::after 
 {    
     content: "";
     background: url(../images/bg-pattern-desktop.svg) no-repeat;
@@ -62,125 +62,108 @@ section
     z-index: 100;
 } 
 
-.textBox div 
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 0 auto;
-    position: relative;
-    top: 4rem;
-}
-
-.textBox h1 
+section .content .textBox h1 
 { 
-    font-size: 5rem;
+    font-size: 4rem;
     text-transform: uppercase;
-    width: 50%;
+    width: 70%;
     font-weight: 700;
     letter-spacing: 16px;
     margin: 0 auto;
-    position: relative;
-    left: -3rem;
-    top: -3rem;
+    position: relative; 
     z-index: 1000;
     color: hsl(0, 6%, 24%);
+    padding: 2rem;
 }
 
-.textBox h1 span 
+section .content .textBox h1 span 
 {
     color: hsl(0, 36%, 70%);
     font-weight: 300;
 }
 
-.textBox p 
+section .content .textBox p 
 {
     font-size: 0.9rem;
-    width: 48%;
+    width: 65%;
     font-weight: 600;
     margin: 0 auto;
     position: relative;
-    line-height: 1.5rem;
-    left: -3rem;
-    top: -2rem;    
+    line-height: 1.5rem;   
     z-index: 1000;
     color: hsl(0, 36%, 70%);
     line-height: 25px;
+    padding: 0 9rem 2rem 1rem;
 }
 
-.textBox form 
+ section .content .textBox form 
 {
-    margin: 0 auto;
-    width: 59%;
-    position: relative;
-    top: 0rem;
-    left: -1rem;
-    color: #fff;
+    margin: 0 auto; 
+    position: relative;  
     z-index: 1000;
     display: flex;
+    width: 100%;
+    left: -3rem;
 }
 
-.textBox form #email 
+section .content .textBox form #email 
 {
     border-radius: 30px;
     padding: 1rem 2rem;
     border: 1px solid hsl(0, 36%, 70%); 
-    width: 100%;
-    margin: 0 auto;
+    width: 49%;
+    margin: 0 0 0 auto;
     position: relative;   
     background: rgba(0,0,0,0);
 }
 
-.textBox form #email:focus 
+section .content .textBox form #email:focus 
 {
     outline: none;
 }
 
-.textBox form #icon-error 
+section .content .textBox form #icon-error 
 {
     z-index: 1000;
     padding: 1rem;
     position: relative;
-    left: -6.5rem;
+    left: 0rem;
     visibility: hidden;
+    margin: 0 0 0 -8rem;
 }
 
-.textBox form #submit 
+section .content .textBox form #submit 
 {
     background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
     border-radius: 30px;
     padding: 1rem 2.5rem;
-    border: none;
-    color: #fff;
-    font-size: 1.5rem;
-    font-weight: 700;
-    font-family: 'Josefin Sans';
+    border: 1px solid hsl(0, 80%, 86%);  
     position: relative;
     top:0rem;
-    left: -7rem;
-    margin: 0 auto;
+    left: 0rem; 
     box-shadow: 0 10px 20px  hsl(0, 80%, 86%);
     transition: 0.5s;
+    z-index: 1000;
+    margin: 0 auto 0 0;
 }
 
-.textBox form #submit:hover 
+section .content .textBox form #submit:hover 
 {
     background: linear-gradient(135deg,hsl(0, 80%, 86%), hsl(0, 44%, 82%));
-    padding: 15px 20px 15px 40px;
+    padding: 1rem 1rem 1rem 4rem;
 }
 
-.textBox form #error
+section .content .textBox #error
 {
-    position: absolute;
-    display: flex;
-    top: 6rem;
-    left: 0rem;
+    position: relative;
+    display: flex; 
     margin: 0 auto;
     justify-content: center;
-    color: hsl(0, 93%, 68%);
+    color: hsl(0, 93%, 68%); 
+    top: 1rem;
 }
 
-.imgBox 
+section .content .imgBox 
 {
     background: #222;
     width: 40%;
@@ -189,92 +172,84 @@ section
     margin: 0 auto;
 }
 
-.imgBox img 
+section .content .imgBox img 
 { 
     object-fit: cover;
     object-position: top;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     visibility: visible;
 }  
 
-@media (max-width: 991px) 
+ @media (max-width: 991px) 
 {
-    section 
+    section .content 
     {
         flex-direction: column-reverse;
         margin: 0 auto;
-    }
-
-    .logo 
-    {
-        position: absolute;
-        left: 0rem;
-        top: 0rem; 
-    }
-
-    .textBox 
-    {
-        text-align: center;
-        width: 100%;
+        padding: 7rem 0 0 0;
     } 
 
-    .textBox div h1 
-    {
-        width: 99%;
-        top: 0rem;
-        left: 0;
-        font-size: 3rem;
-        padding: 1rem 0;
-    }
-
-    .textBox div p 
-    {
-        width: 85%;
-        top: 0rem;
-        left: 0;
-
-    }
-
-    .textBox div form 
-    {
-        top: 0rem;
-        left: 2rem;
-        width: 90%;
-        padding: 1rem 0;
-    }
-
-    .imgBox
+    section .content .textBox 
     {
         width: 100%;
-        height: 30vh;
+        text-align: center;
+    }
+
+    section .content .textBox h1 
+    {
+        width: 100%;
+        font-size: 3rem;
+    }
+
+    section .content .textBox p
+    {
+        width: 90%;
+        padding: 0 0 2rem 0;
+        font-size: 1rem;
+    }
+
+    section .content .textBox form 
+    { 
+        left: 0;
+    }
+
+    section .content .textBox form #icon-error 
+    {
+        margin-left: -7rem;
+    }
+    
+    section .content .textBox form #submit 
+    {
+        padding: 1rem 1.5rem;
+    }
+
+    section .content .imgBox
+    { 
         background: url(../images/hero-mobile.jpg) no-repeat top left;
         background-size: cover;
+        width: 100%;
+        height: 30vh;
     }
 
-    .imgBox img 
+    section .content .imgBox img 
     {
         visibility: hidden;
-    }
+    } 
 }
 
-@media (max-width:991px) and ( max-height: 690px)
+@media (max-width: 320px)
 {
-    section 
-    {
-        margin: 2rem auto;
-    }
-
-    .logo 
-    {
-        top: -3rem;
-    }
-}
-
-@media (max-width: 300px)
-{
-    .textBox div h1 
+    section .content .textBox h1 
     {
         font-size: 2rem;
     }
+
+    section .content .textBox form #email 
+    {
+        width: 60%;
+    }
+
 }
+
+  
